[metadata]
name = HelloWorld
summary = HelloWorld program
license = Apache License, Version 2.0
author = Naresh
author-email = nareshA@criterionnetworks.com
home-page = http://www.criterionnetworks.com/
classifier =
    Development Status :: 1 -Dev
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    hello

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
   hello  = hello.hello:main

[wheel]
universal = 1
